# math2latex

./: LICENSE  README.md  pyproject.toml
notebooks/: latex-tokenizer.json  test.ipynb  tokenize.ipynb  train.ipynb
src/math2latex/: __init__.py  dataset.py  model.py  training.py
