[project]
name = "math2latex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maximilian.Burzer", email = "maxi.burzer@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "pip>=25.1.1",
    "positional-encodings[pytorch]>=6.0.3",
    "tokenizers>=0.21.1",
    "torch>=2.4.1",
    "torch-directml>=0.2.5.dev240914",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
